--- a/websites/BPN/www/site/compiled-dev/css/intro.css
+++ b/websites/BPN/www/site/compiled-dev/css/intro.css
@@ -1,14 +1,28 @@
 #intro {
   background: white;
   position: fixed;
-  width: 100%;
   height: 100%;
+  width: 100%;
   z-index: 2;
   top: 0;
 }
-#intro .test {
-  display: none;
-  border: 10px;
+#intro .bpn-logo {
+  transform: translate(-50%, -50%);
+  position: absolute;
+  display: table;
+  opacity: 0;
+  left: 50%;
+  top: 50%;
+  animation: logoIn 1s 1s;
+}
+
+@keyframes logoIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=intro.css.map */
