--- a/websites/BPN/www/site/templates/styles/sass/intro.scss
+++ b/websites/BPN/www/site/templates/styles/sass/intro.scss
@@ -1,19 +1,21 @@
 .intro{
-  background: white;
+  background: #efefef;
   position: fixed;
   height: 100%;
   width: 100%;
   z-index: 2;
   top: 0;
-  &__bpn-logo{
+  &__content{
     transform: translate(-50%, -50%);
     position: absolute;
     display: table;
-    opacity: 0;
     left: 50%;
     top: 50%;
-    animation: logoIn 1.8s  forwards;
+    &__bpn-logo{  
+      animation: logoIn 1.8s  forwards;
+    }
   }
+  
   &__loader{
 
   }
@@ -23,16 +25,15 @@
 .bar{
   position: absolute;
   margin: 0 auto;
-  width:40px;
-  height: 40px;
+  width:160px;
+  height: 160px;
   left: 0;
   top: 0;
   transform: translate(-50%, -50%);
   border-radius: 50%;
-  border: 20px solid gray;
-  -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 0%, 0% 0%);
+  border: 15px solid white;
   transform-origin: 50% 50%;
-  background: white;
+  background: transparent;
   opacity: 0.9;
   transition: 2s;
   z-index: 2;
@@ -40,50 +41,23 @@
 .intro__content__loader{
   position: absolute;
   margin: 0 auto;
-  width: 80px;
-  height: 80px;
-  left: 22%;
-  top: 0%;
-  overflow: hidden;   
-  transform: translateY(-50%);
+  width: 190px;
+  height: 200px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
   transition: 0.5s;
 }
 .b1{
   transform: rotate(0deg);
 }
-.b2{
-  transform: rotate(72deg);
-}
-.b3{
-  transform: rotate(144deg);
-}
-.b4{
-  transform: rotate(219deg);
-}
-.b5{
-  transform: rotate(290deg);
-}
 .rotate-loader{
-  transform: rotate(0deg);
-  border-color: #828282;
-  z-index: 1;
-}
-
-
-
-
-.bar{
-  -webkit-clip-path: polygon(65% 89%, 85% 100%, 17% 100%, 37% 89%);
-  //-webkit-clip-path: polygon(65% 89%, 73% 100%, 25% 100%, 37% 89%);
-}
-.rotate-loader{
+  -webkit-clip-path: polygon(65% 79%, 85% 100%, 17% 100%, 37% 79%);
   animation: rotateLoader 1.5s 0.5s linear infinite;
-}
-.intro__content__loader{
-  label{
-    color: black;
-    opacity: 1;
-  }
+  transform: rotate(0deg);
+  border-color: #097ABB;
+  z-index: 3;
 }
 
 // animate the Intro logo in
