--- a/websites/BPN/www/site/templates/styles/sass/intro.scss
+++ b/websites/BPN/www/site/templates/styles/sass/intro.scss
@@ -12,23 +12,30 @@
     left: 50%;
     top: 50%;
     &__bpn-logo{  
-      animation: logoIn 1.8s  forwards;
+      animation: logoIn 1.8s forwards;
+    }
+    &__loader{
+      position: absolute;
+      margin: 0 auto;
+      width: 190px;
+      height: 200px;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      overflow: hidden;
+      transition: 0.5s;
     }
   }
-  
-  &__loader{
 
-  }
 }
 
-
-.bar{
+.bar, .orbit{
   position: absolute;
   margin: 0 auto;
   width:160px;
   height: 160px;
-  left: 0;
-  top: 0;
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50%;
   border: 15px solid white;
@@ -37,27 +44,36 @@
   opacity: 0.9;
   transition: 2s;
   z-index: 2;
+
 }
-.intro__content__loader{
+.orbit:after{
+  content: " ";
   position: absolute;
-  margin: 0 auto;
-  width: 190px;
-  height: 200px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  transition: 0.5s;
+  z-index: -1;
+  top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
+  border: 1px solid #D0D0D0;
+  border-radius: 50%;
 }
-.b1{
-  transform: rotate(0deg);
-}
+
 .rotate-loader{
   -webkit-clip-path: polygon(65% 79%, 85% 100%, 17% 100%, 37% 79%);
-  animation: rotateLoader 1.5s 0.5s linear infinite;
   transform: rotate(0deg);
   border-color: #097ABB;
+  left: 0;
+  top: 0;
   z-index: 3;
+  animation: rotateLoader 1.5s 0s linear infinite;
+}
+
+.fly-out{
+  animation: flyOut 1.5s linear forwards;
+  #home-pg {
+    opacity: 0;
+    animation: flyOut 1.5s linear forwards;
+  }
 }
 
 // animate the Intro logo in
@@ -66,8 +82,13 @@
   100% {top: 50%; opacity: 1}
 }
 
-
-@-webkit-keyframes rotateLoader{
+@keyframes rotateLoader{
   0%{transform: rotate(0deg)}
   100%{transform: rotate(360deg)}
 }
+
+@keyframes flyOut{
+  0%{top: 0%;}
+  100%{top: -100%;}
+}
+
