--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -11,6 +11,20 @@ html, body, .perspective {
   height: 100%;
 }
 
+nav#nav-menu {
+  left: 0;
+  top: 0;
+  height: 80px;
+  width: 100%;
+  background-color: gray;
+  transform: translateY(0%);
+  z-index: 10;
+}
+nav#nav-menu a {
+  opacity: 1;
+  display: inline;
+}
+
 .perspective {
   background: #aaa;
   position: relative;
