--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -14,6 +14,26 @@ html, body, .perspective {
 	height: 100%;
 }
 
+
+
+nav#nav-menu {
+	left: 0;
+	top: 0;
+  height: 80px;
+  width: 100%;
+  background-color: gray;
+  transform: translateY(0%);
+  z-index: 10;
+  a{
+    opacity: 1;
+    display: inline;
+  }
+}
+
+
+
+
+
 .perspective {
 	background: #aaa;
 	position: relative;
