--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -14,10 +14,9 @@ html, body, .perspective {
 	height: 100%;
 }
 
-
-
+// Nav Menu for Desktop
 nav#nav-menu {
-	left: 0;
+	right: 0;
 	top: 0;
   height: 80px;
   width: 100%;
@@ -30,9 +29,20 @@ nav#nav-menu {
   }
 }
 
-
-
-
+@media (max-width:960px){
+	nav#nav-menu {
+		right: 25%;
+		top: 50%;
+	  height: auto;
+	  width: auto;
+	  background-color: transparent;
+	  transform: translateY(-50%);
+	  z-index: 0;
+	  a{
+	    display: block;
+	  }
+	}
+}
 
 .perspective {
 	background: #aaa;
@@ -117,30 +127,11 @@ nav#nav-menu {
 	transform-style: preserve-3d;
 }
 
-.outer-nav.horizontal {
-	left: 50%;
-	width: 75%;
-	max-width: 1000px;
-	text-align: center;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-}
-
-.outer-nav.left {
-	left: 25%;
-}
 
 .outer-nav.right {
 	right: 25%;
 }
 
-.outer-nav.top {
-	top: 25%;
-}
-
-.outer-nav.bottom {
-	bottom: 25%;
-}
 
 .outer-nav a {
 	display: inline-block;
