--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -16,19 +16,23 @@ nav#nav-menu {
   top: 0;
   height: 80px;
   width: 100%;
-  background-color: gray;
-  transform: translateY(0%);
-  z-index: 10;
+  font-size: 1em;
+  text-align: right;
+  background-color: #f7f7f7;
+  opacity: 0;
+  z-index: 11;
 }
 nav#nav-menu a {
   opacity: 1;
-  display: inline;
+  display: inline-block;
+  transform: translateY(-50%);
 }
 
 @media (max-width: 960px) {
   nav#nav-menu {
     right: 25%;
     top: 50%;
+    font-size: 1em;
     height: auto;
     width: auto;
     background-color: transparent;
@@ -45,7 +49,8 @@ nav#nav-menu a {
 }
 
 .container {
-  background: #fff;
+  background: #efefef;
+  height: 100%;
   min-height: 100%;
   position: relative;
   outline: 1px solid transparent;
@@ -71,6 +76,7 @@ nav#nav-menu a {
 
 .wrapper {
   position: relative;
+  height: 100%;
 }
 
 .component {
@@ -117,9 +123,6 @@ nav#nav-menu a {
 }
 
 .outer-nav.vertical {
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
@@ -129,11 +132,12 @@ nav#nav-menu a {
 }
 
 .outer-nav a {
+  position: relative;
   display: inline-block;
   white-space: nowrap;
   font-weight: 300;
   margin: 0 0 30px 0;
-  color: #fff;
+  color: #000;
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
   -webkit-transform-style: preserve-3d;
