--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -20,12 +20,15 @@ nav#nav-menu {
 	top: 0;
   height: 80px;
   width: 100%;
-  background-color: gray;
-  transform: translateY(0%);
-  z-index: 10;
+  font-size: 1em;
+  text-align: right;
+  background-color: #f7f7f7;
+  opacity: 0;
+  z-index: 11;
   a{
     opacity: 1;
-    display: inline;
+    display: inline-block;
+    transform: translateY(-50%);
   }
 }
 
@@ -33,6 +36,7 @@ nav#nav-menu {
 	nav#nav-menu {
 		right: 25%;
 		top: 50%;
+		font-size: 1em;
 	  height: auto;
 	  width: auto;
 	  background-color: transparent;
@@ -50,7 +54,8 @@ nav#nav-menu {
 }
 
 .container {
-	background: #fff;
+	background: #efefef;
+	height: 100%;
 	min-height: 100%;
 	position: relative;
 	outline: 1px solid rgba(0,0,0,0);
@@ -75,6 +80,7 @@ nav#nav-menu {
 
 .wrapper {
 	position: relative;
+	height:100%;
 }
 
 .component {
@@ -120,9 +126,6 @@ nav#nav-menu {
 }
 
 .outer-nav.vertical {
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%);
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 }
@@ -134,11 +137,12 @@ nav#nav-menu {
 
 
 .outer-nav a {
+  position: relative;
 	display: inline-block;
 	white-space: nowrap;
 	font-weight: 300;
 	margin: 0 0 30px 0;
-	color: #fff;
+	color: #000;
 	-webkit-transition: color 0.3s;
 	transition: color 0.3s;
 	-webkit-transform-style: preserve-3d;
