--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -1,8 +1,12 @@
 @charset "UTF-8";
+.bounding-container {
+  max-width: 1500px;
+}
+
 @font-face {
   font-family: 'typicons';
-  src: url("../fonts/typicons/typicons.eot");
-  src: url("../fonts/typicons/typicons.eot?#iefix") format("embedded-opentype"), url("../fonts/typicons/typicons.ttf") format("truetype"), url("../fonts/typicons/typicons.woff") format("woff"), url("../fonts/typicons/typicons.svg#typicons") format("svg");
+  src: url("fonts/typicons/typicons.eot");
+  src: url("fonts/typicons/typicons.eot?#iefix") format("embedded-opentype"), url("fonts/typicons/typicons.ttf") format("truetype"), url("fonts/typicons/typicons.woff") format("woff"), url("fonts/typicons/typicons.svg#typicons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +18,7 @@ html, body, .perspective {
 nav#nav-menu {
   right: 0;
   top: 0;
-  height: 80px;
+  height: 90px;
   width: 100%;
   font-size: 1em;
   text-align: right;
@@ -22,10 +26,35 @@ nav#nav-menu {
   opacity: 0;
   z-index: 11;
 }
+nav#nav-menu .bounding-container {
+  position: relative;
+  margin: 0 auto;
+  height: 100%;
+}
+nav#nav-menu .nav-menu__logo {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: left;
+  display: inline-block;
+}
 nav#nav-menu a {
   opacity: 1;
   display: inline-block;
   transform: translateY(-50%);
+  text-decoration: none;
+  margin-right: 17px;
+}
+nav#nav-menu a:last-child {
+  margin-right: 1.5em;
+}
+nav#nav-menu a::before {
+  display: none;
+}
+
+button#showMenu {
+  display: none;
 }
 
 @media (max-width: 960px) {
@@ -40,6 +69,13 @@ nav#nav-menu a {
     z-index: 0;
   }
   nav#nav-menu a {
+    display: block;
+  }
+  nav#nav-menu a::before {
+    display: inline-block;
+  }
+
+  button#showMenu {
     display: block;
   }
 }
@@ -133,7 +169,6 @@ nav#nav-menu a {
 
 .outer-nav a {
   position: relative;
-  display: inline-block;
   white-space: nowrap;
   font-weight: 300;
   margin: 0 0 30px 0;
@@ -165,7 +200,7 @@ nav#nav-menu a {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  margin-right: 10px;
+  margin-right: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-backface-visibility: hidden;
@@ -207,7 +242,7 @@ nav#nav-menu a {
 /* Individual Effects */
 /* Effect Rotate Left */
 .effect-rotateleft {
-  background: #e96e4f;
+  background: #f7f7f7;
 }
 
 .effect-rotateleft .container {
