--- a/websites/BPN/www/site/templates/styles/sass/base.scss
+++ b/websites/BPN/www/site/templates/styles/sass/base.scss
@@ -1,2 +1,4 @@
+@import "partials/variables.scss";
+@import "partials/layout.scss";
 @import "partials/nav.scss";
 @import "partials/normalize.scss";
