--- a/websites/BPN/www/site/templates/styles/sass/partials/_itemZoom.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_itemZoom.scss
@@ -5,14 +5,14 @@ body {
 	height: 100%;
 }
 
-.container {
+/*.container {
 	position: relative;
 	overflow: hidden;
 	overflow-y: scroll;
 	width: 100%;
 	height: 100%;
 	-webkit-overflow-scrolling: touch;
-}
+}*/
 
 .noscroll .container {
 	overflow-y: hidden;
@@ -221,7 +221,7 @@ body {
 	border-radius: inherit;
 }
 /* Content */
-.content {
+/*.content {
 	position: fixed;
 	z-index: 1000;
 	top: 0;
@@ -232,10 +232,19 @@ body {
 	height: 100vh;
 	background: #18191b;
 	-webkit-overflow-scrolling: touch;
-}
+}*/
 
 .content--open {
-	left: 0;
+	position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  overflow-y: scroll;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background: #18191b;
 }
 
 .content__item {
