--- a/websites/BPN/www/site/templates/styles/sass/partials/_filterItems.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_filterItems.scss
@@ -2,6 +2,8 @@
   position: relative;
   min-height: 300px;
   margin: 0 0 0 300px;
+  width: 100%;
+  height: 100%;
 	.filter-items {
 	  margin: 0;
 	  padding: 2em;
