--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -9,8 +9,8 @@
     margin: 10px 1%;
     min-width: 320px;
     max-width: 480px;
-    max-height: 360px;
-    width: 48%;
+    max-height: 240px;
+    width: 33%;
     height: auto;
     background: #3085a3;
     text-align: center;
@@ -21,16 +21,30 @@
     }
 }
 
-figure.effect-terry {
-  background: #34495e;
+figure.teaser {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1s;
+  background: black;
 }
 
-figure.effect-terry figcaption {
+figure.open-up {
+  width: 100vw;
+  height: 100vh;
+  max-width: none;
+  max-height: none;
+  top: 0px;
+  left: -300px;
+  margin: 0;
+}
+
+figure.teaser figcaption {
   padding: 1em;
 }
 
-figure.effect-terry figcaption::before,
-figure.effect-terry figcaption::after {
+figure.teaser figcaption::before,
+figure.teaser figcaption::after {
   position: absolute;
   width: 200%;
   height: 200%;
@@ -41,7 +55,7 @@ figure.effect-terry figcaption::after {
   transition: transform 0.35s;
 }
 
-figure.effect-terry figcaption::before {
+figure.teaser figcaption::before {
   right: 0;
   bottom: 0;
   border-width: 0 70px 60px 0;
@@ -49,7 +63,7 @@ figure.effect-terry figcaption::before {
   transform: translate3d(70px,60px,0);
 }
 
-figure.effect-terry figcaption::after {
+figure.teaser figcaption::after {
   top: 0;
   left: 0;
   border-width: 15px 0 0 15px;
@@ -57,21 +71,22 @@ figure.effect-terry figcaption::after {
   transform: translate3d(-15px,-15px,0);
 }
 
-figure.effect-terry img,
-figure.effect-terry p a {
+figure.teaser img,
+figure.teaser p a {
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s;
 }
 
-figure.effect-terry img {
+figure.teaser img {
   opacity: 0.85;
+  width: 100%;
 }
 
-figure.effect-terry h2 {
+figure.teaser h2 {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0.4em 10px;
+  padding: 0.2em 5px;
   width: 50%;
   -webkit-transition: -webkit-transform 0.35s;
   transition: transform 0.35s;
@@ -80,24 +95,24 @@ figure.effect-terry h2 {
 }
 
 @media screen and (max-width: 920px) {
-  figure.effect-terry h2 {
-    padding: 0.75em 10px;
+  figure.teaser h2 {
+    padding: 0.5em 5px;
     font-size: 120%;
   }
 }
 
-figure.effect-terry p {
+figure.teaser p {
   float: right;
   clear: both;
   text-align: left;
   text-transform: none;
   font-size: 111%;
-  right: 7%;
+  right: 25px;
   top: 0;
   position: absolute;
 }
 
-figure.effect-terry p a {
+figure.teaser p a {
   display: block;
   margin-bottom: 1em;
   color: #fff;
@@ -106,48 +121,48 @@ figure.effect-terry p a {
   transform: translate3d(90px,0,0);
 }
 
-figure.effect-terry p a:hover,
-figure.effect-terry p a:focus {
+figure.teaser p a:hover,
+figure.teaser p a:focus {
   color: #f3cf3f;
 }
 
-figure.effect-terry:hover figcaption::before,
-figure.effect-terry:hover figcaption::after {
+figure.teaser:hover figcaption::before,
+figure.teaser:hover figcaption::after {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
 
-figure.effect-terry:hover img {
+figure.teaser:hover img {
   opacity: 0.6;
 
 }
 
-figure.effect-terry:hover h2,
-figure.effect-terry:hover p a {
+figure.teaser:hover h2,
+figure.teaser:hover p a {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
 
-figure.effect-terry:hover p a {
+figure.teaser:hover p a {
   opacity: 1;
 }
 
-figure.effect-terry:hover p a:first-child {
+figure.teaser:hover p a:first-child {
   -webkit-transition-delay: 0.025s;
   transition-delay: 0.025s;
 }
 
-figure.effect-terry:hover p a:nth-child(2) {
+figure.teaser:hover p a:nth-child(2) {
   -webkit-transition-delay: 0.05s;
   transition-delay: 0.05s;
 }
 
-figure.effect-terry:hover p a:nth-child(3) {
+figure.teaser:hover p a:nth-child(3) {
   -webkit-transition-delay: 0.075s;
   transition-delay: 0.075s;
 }
 
-figure.effect-terry:hover p a:nth-child(4) {
+figure.teaser:hover p a:nth-child(4) {
   -webkit-transition-delay: 0.1s;
   transition-delay: 0.1s;
 }
