--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -22,7 +22,7 @@
 }
 
 figure.teaser {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   transition: 1s;
@@ -30,13 +30,15 @@ figure.teaser {
 }
 
 figure.open-up {
+  display: block !important;
   width: 100vw;
   height: 100vh;
   max-width: none;
   max-height: none;
-  top: 0px;
+  top: -300px;
   left: -300px;
   margin: 0;
+  z-index: 100;
 }
 
 figure.teaser figcaption {
