--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -306,9 +306,31 @@
     transform: translate3d(0, 0, 0);
   }
 }
-/*-----------------*/
-/***** Terry *****/
-/*-----------------*/
+.content article {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: scroll;
+  background-color: black;
+  z-index: 100;
+}
+.content article img {
+  position: fixed;
+  max-width: 50%;
+}
+.content article .content-copy {
+  width: 50%;
+  position: absolute;
+  right: 0;
+  color: white;
+}
+.content article .content-copy p {
+  word-wrap: break-word;
+}
 .content figure {
   position: relative;
   float: left;
