--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -322,11 +322,22 @@
   position: fixed;
   max-width: 50%;
 }
+.content article .close-content-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  z-index: 10;
+  cursor: pointer;
+}
 .content article .content-copy {
   width: 50%;
   position: absolute;
   right: 0;
   color: white;
+  z-index: 2;
 }
 .content article .content-copy p {
   word-wrap: break-word;
