--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -14,11 +14,22 @@
       position: fixed;
       max-width: 50%;
     }
+    .close-content-btn{
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 30px;
+      height: 30px;
+      background-color: white;
+      z-index: 10;
+      cursor: pointer;
+    }
     .content-copy{
       width: 50%;
       position: absolute;
       right: 0;
       color: white;
+      z-index: 2;
       p{
         word-wrap: break-word;
       }
