--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -306,6 +306,10 @@
     transform: translate3d(0, 0, 0);
   }
 }
+body {
+  background-color: black;
+}
+
 .content article {
   opacity: 0;
   visibility: hidden;
