add styles and article detail logic

--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/*-------------------------
+Responsive Media Queries
+-------------------------*/
+/*-----------------------------
+Responsive Media Queries (END)
+-----------------------------*/
 .admin-edit {
   position: absolute;
   z-index: 100;
