--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -5,3 +5,10 @@ $bpnBlue: #097ABB;
 
 // layout
 $bounding-container: 1500px;
+
+
+// mixins
+@mixin flex() {
+  display: -webkit-flex;
+  display: flex;
+}
