--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -1,2 +1,3 @@
-@import "partials/filterItems.scss";
+@import "partials/variables.scss";
+@import "partials/filterNav.scss";
 @import "partials/teaserItem.scss";
