--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -5,6 +5,11 @@ Responsive Media Queries
 /*-----------------------------
 Responsive Media Queries (END)
 -----------------------------*/
+.events-container,
+#home-pg {
+  top: 90px;
+}
+
 .admin-edit {
   position: absolute;
   z-index: 100;
@@ -40,7 +45,7 @@ nav#nav-menu {
   font-size: 1em;
   text-align: right;
   background-color: #f7f7f7;
-  opacity: 0;
+  opacity: 1;
   z-index: 11;
 }
 nav#nav-menu .bounding-container {
