--- a/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
@@ -1,4 +1,4 @@
-.container{
+.events-container{
   @include flex();
 }
 #filter-nav{
@@ -6,9 +6,14 @@
   top: 0;
   height: 100%;
   min-width: 200px;
-  background-color: gray;
+  width: 18%;
+  background-color: $bpnDarkBlue;
   li{
     display: block;
     padding: 10px 0;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
   }
 }
