--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -1,43 +1,9 @@
 body{
   background-color: black;
 }
-.content {
-  article{
-    opacity: 0;
-    visibility: hidden;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow: scroll;
-    background-color: black;
-    z-index: 100;
-    img{
-      position: fixed;
-      width: 50%;
-    }
-    .close-content-btn{
-      position: absolute;
-      top: 30px;
-      right: 0;
-      width: 30px;
-      height: 30px;
-      background-color: white;
-      z-index: 10;
-      cursor: pointer;
-    }
-    .article-copy{
-      width: 45%;
-      position: absolute;
-      right: 0;
-      color: white;
-      z-index: 2;
-      p{
-        word-wrap: break-word;
-      }
-    }
-  }
+.events-container {
+  position: relative;
+  height: 100%;
   figure {
     position: relative;
     float: left;
@@ -72,6 +38,43 @@ body{
     &.fade-in{
       opacity: 1;
       top: 0%;
+    }
+  }
+}
+
+.article-details{
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: scroll;
+  background-color: black;
+  z-index: 100;
+  img{
+    position: fixed;
+    width: 50%;
+  }
+  .close-content-btn{
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    z-index: 10;
+    cursor: pointer;
+  }
+  .article-copy{
+    width: 45%;
+    position: absolute;
+    right: 0;
+    color: white;
+    z-index: 2;
+    p{
+      word-wrap: break-word;
     }
   }
 }
