--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -26,7 +26,7 @@ body {
 
 .events-container {
   position: relative;
-  height: 100%;
+  height: calc(100% - 90px);
 }
 .events-container figure {
   position: relative;
@@ -34,7 +34,7 @@ body {
   overflow: hidden;
   margin: 10px 1%;
   min-width: 270px;
-  max-width: 480px;
+  max-width: 340px;
   max-height: 240px;
   width: 30%;
   height: auto;
@@ -45,6 +45,9 @@ body {
 .events-container figure h2 {
   font-size: 1.5em;
   color: white;
+}
+.events-container .figure-container {
+  width: 80%;
 }
 .events-container .post-image {
   opacity: 0;
@@ -73,7 +76,6 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  overflow: scroll;
   background-color: black;
   z-index: 100;
 }
