--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -64,6 +64,7 @@ nav#nav-menu .nav-menu__logo {
 nav#nav-menu a {
   opacity: 1;
   display: inline-block;
+  top: 50%;
   transform: translateY(-50%);
   text-decoration: none;
   margin-right: 17px;
@@ -134,7 +135,7 @@ button#showMenu {
 
 .wrapper {
   position: relative;
-  height: 100%;
+  height: 100vh;
 }
 
 .component {
