--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -37,6 +37,12 @@ nav#nav-menu {
     transform: translateY(-50%);
     text-align: left;
   	display: inline-block;
+  	a{
+	    margin: 0;
+	    top: 0;
+	    position: relative;
+	    transform: translateY(0);
+  	}
   }
   a{
     opacity: 1;
