--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -19,6 +19,7 @@ body {
   background: #3085a3;
   text-align: center;
   cursor: pointer;
+  box-shadow: 3px 3px 15px -5px;
 }
 .events-container figure h2 {
   font-size: 1.5em;
