--- a/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
@@ -1,19 +1,14 @@
-.events-container{
-  @include flex();
-}
 #filter-nav{
   position: relative;
   top: 0;
-  height: 100%;
-  min-width: 200px;
-  width: 18%;
-  background-color: $bpnDarkBlue;
+  display: block;
+  height: 40px;
+  width: 100%;
+  background-color: $bpnBlue;
   li{
-    display: block;
-    padding: 10px 0;
+    display: inline-block;
+    padding: 10px 10px;
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 60%;
+    color: white;
   }
 }
