--- a/websites/BPN/www/site/templates/styles/home-grid.css
+++ b/websites/BPN/www/site/templates/styles/home-grid.css
@@ -12,17 +12,22 @@
 	-webkit-flex: 1 0 25%;
 	flex: 1 0 25%;
 	overflow: hidden;
-	height: 24vw;
 	outline: none;
+  max-height: calc(44vh - 10px);
 	border: 5px solid #2a2e39;
 	border-width: 0 5px 10px;
 	background: #2a2e39;
 }
 
+#about-link{
+  flex: 47%;
+  height: calc(50vh - 10px);
+}
+
 .item__image {
 	/*position: absolute;
 	top: 50%;*/
-	min-height: 100%;
+	/*min-height: 100%;*/
 	width: 100%;
 	opacity: 0.7;
 	/*-webkit-transform: translate3d(0, -50%, 0) scale3d(1.2, 1.2, 1);
@@ -61,7 +66,6 @@
 
 @media screen and (max-width: 1440px) {
 	.item {
-		height: 24vw;
 	}
 }
 
@@ -76,7 +80,7 @@
 	.item {
 		-webkit-flex: 1 0 100%;
 		flex: 1 0 100%;
-		height: 90vw;
+		/*height: 90vw;*/
 	}
 
 	.intro__title {
