--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -1,3 +1,4 @@
 @import "partials/variables.scss";
+@import "partials/layout.scss";
 @import "partials/filterNav.scss";
 @import "partials/teaserItem.scss";
