--- a/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
@@ -12,7 +12,10 @@ body:before{
   animation: loadIn 1s forwards;
 }
 
-body
+// make an exception for the home page
+body.wipe-off:before{
+  opacity: 0;
+}
 
 // Push content down to make space for the nav bar
 .events-container,
@@ -58,7 +61,6 @@ Animation
     background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 29%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 29%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
-    left: 50%;
     left: 100%;
   }
 }
