--- a/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
@@ -17,6 +17,12 @@ body.wipe-off:before{
   opacity: 0;
 }
 
+// white page loadOut effect
+body.load-out:before{
+  opacity: 1;
+  animation: loadOut 0.6s forwards;
+}
+
 // Push content down to make space for the nav bar
 .events-container,
 #home-pg{
@@ -62,5 +68,22 @@ Animation
     background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 29%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
     left: 100%;
+  }
+}
+
+@keyframes loadOut{
+  0%{
+    background: -moz-linear-gradient(right,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 29%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 29%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 29%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+    left: -100%;
+  }
+  100%{
+    background: -moz-linear-gradient(right,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 29%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(right,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 29%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to left,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 29%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+    left: 0%;
   }
 }
