implemented google maps

--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -2,3 +2,4 @@
 @import "partials/layout.scss";
 @import "partials/filterNav.scss";
 @import "partials/teaserItem.scss";
+@import "partials/map.scss";
