--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -16,7 +16,7 @@ html, body, .perspective {
 
 // Nav Menu for Desktop
 nav#nav-menu {
-	right: 0;
+	left: 0;
 	top: 0;
   height: 90px;
   width: 100%;
