--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -148,6 +148,7 @@ body {
   width: 80%;
 }
 .events-container .post-image {
+  position: relative;
   opacity: 0;
   left: -7%;
   transition: 1.5s;
@@ -176,6 +177,7 @@ body {
   left: 0;
   background-color: black;
   z-index: 100;
+  overflow-y: scroll;
 }
 .article-details img {
   position: fixed;
@@ -347,6 +349,11 @@ figure.teaser:hover p a:nth-child(3) {
 figure.teaser:hover p a:nth-child(4) {
   -webkit-transition-delay: 0.1s;
   transition-delay: 0.1s;
+}
+
+#map {
+  height: 400px;
+  width: 50%;
 }
 
 /*# sourceMappingURL=events.css.map */
