--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -133,6 +133,7 @@ body {
   width: 80%;
 }
 .events-container .post-image {
+  position: relative;
   opacity: 0;
   left: -7%;
   transition: 1.5s;
@@ -161,6 +162,7 @@ body {
   left: 0;
   background-color: black;
   z-index: 100;
+  overflow-y: scroll;
 }
 .article-details img {
   position: fixed;
