--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -28,6 +28,7 @@ body{
     width: 80%;
   }
   .post-image{
+    position: relative;
     opacity: 0;
     left: -7%;
     transition: 1.5s;
@@ -57,6 +58,7 @@ body{
   left: 0;
   background-color: black;
   z-index: 100;
+  overflow-y: scroll;
   img{
     position: fixed;
     width: 50%;
