--- a/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
@@ -24,10 +24,10 @@ body.load-out:before{
 }
 
 // Push content down to make space for the nav bar
-.events-container,
-#home-pg{
-  top: 90px;
-}
+// .events-container,
+// #home-pg{
+//   top: 90px;
+// }
 
 .admin-edit{
   position: absolute;
