--- a/websites/BPN/www/site/templates/styles/sass/intro.scss
+++ b/websites/BPN/www/site/templates/styles/sass/intro.scss
@@ -1,5 +1,12 @@
-.intro{
+.intro-cover{
+  height: 100%;
+  width: 100%;
+  z-index: 11;
+  position: fixed;
+  top: 0;
   background: #efefef;
+}
+.intro{
   position: fixed;
   height: 100%;
   width: 100%;
@@ -23,7 +30,6 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      overflow: hidden;
       transition: 0.5s;
     }
   }
