--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -18,11 +18,9 @@ html, body, .perspective {
 nav#nav-menu {
 	left: 0;
 	top: 0;
-  height: 90px;
   width: 100%;
   font-size: 1em;
   text-align: right;
-  background-color: $navBG;
   opacity: 1;
   z-index: 10;
   .bounding-container{
@@ -30,27 +28,11 @@ nav#nav-menu {
   	margin: 0 auto;
     height: 100%;
   }
-  .nav-menu__logo{
-  	position: absolute;
-    left: 15px;
-    top: 53%;
-    transform: translateY(-50%);
-    text-align: left;
-  	display: inline-block;
-  	a{
-	    margin: 0;
-	    top: 0;
-	    position: relative;
-	    transform: translateY(0);
-  	}
-  }
   a{
     opacity: 1;
     display: inline-block;
-    top: 50%;
-    transform: translateY(-50%);
     text-decoration: none;
-    margin-right: 17px;
+    margin: 10px 17px 0 0;
 	  &:last-child{
 	  	margin-right: 1.5em;
 	  }
@@ -254,8 +236,6 @@ button#showMenu{
 
 .effect-rotateleft .outer-nav a {
 	opacity: 0;
-	-webkit-transform: translateX(350px) translateZ(-1000px);
-	transform: translateX(350px) translateZ(-1000px);
 	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
 	transition: transform 0.4s, opacity 0.4s;
 }
