--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -1,7 +1,5 @@
-#welcome-frame {
-  background-image: url(/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/golden-gate.jpg);
-  background-size: cover;
-  height: 90vh;
+#welcome-frame video {
+  width: 100%;
 }
 
 /*# sourceMappingURL=homePg.css.map */
