--- a/websites/BPN/www/site/compiled-dev/css/intro.css
+++ b/websites/BPN/www/site/compiled-dev/css/intro.css
@@ -17,6 +17,7 @@
 .intro__content {
   transform: translate(-50%, -50%);
   position: absolute;
+  min-width: 330px;
   display: table;
   left: 50%;
   top: 50%;
@@ -24,6 +25,7 @@
 .intro__content__bpn-logo {
   transform: translateY(5.5px);
   animation: logoIn 1.8s forwards;
+  text-align: center;
 }
 .intro__content__loader {
   position: absolute;
@@ -34,6 +36,15 @@
   top: 50%;
   transform: translate(-50%, -50%);
   transition: 0.5s;
+}
+
+.slogan {
+  position: absolute;
+  text-align: center;
+  color: white;
+  opacity: 0;
+  text-shadow: 0px 0px 10px #565656;
+  color: white;
 }
 
 #home-pg {
