--- a/websites/BPN/www/site/templates/styles/sass/homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/homePg.scss
@@ -1,5 +1,5 @@
 #welcome-frame{
-  background-image: url(/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/golden-gate.jpg);
-  background-size: cover;
-  height: 90vh;
+  video{
+    width: 100%;
+  }
 }
