--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -42,6 +42,11 @@ body.load-out:before {
   max-width: 1500px;
 }
 
+.copy-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 /*
 Animation
 */
